feature/Calendar&CalendarDetails : Add all get methods and Delete by BoGyeong Kim