@@ -1,62 +1,60 @@
 package github.tourism.service.calendar;
 
-import github.tourism.data.entity.calendar.Calendar;
 import github.tourism.data.entity.calendar.CalendarDetails;
-import github.tourism.data.entity.favPlace.FavPlace;
 import github.tourism.data.repository.calendar.CalendarDetailsRepository;
-import github.tourism.data.repository.calendar.CalendarRepository;
-import github.tourism.data.repository.favPlace.FavPlaceRepository;
+import github.tourism.web.advice.ErrorCode;
 import github.tourism.web.dto.calendar.CalendarDetailsDTO;
+import github.tourism.web.exception.NotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static github.tourism.web.advice.ErrorCode.USER_NOT_FOUNDED;
 
 @Service
 @RequiredArgsConstructor
 public class CalendarDetailsService {
-
-
     private final CalendarDetailsRepository calendarDetailsRepository;
-    private final CalendarRepository calendarRepository;
-    private final FavPlaceRepository favPlaceRepository;
-
 
     public List<CalendarDetailsDTO> getCalendarDetailsByUserAndDate(int userId, LocalDate tourStartDate) {
-        // 1. userId와 tourStartDate로 Calendar 객체를 가져옴
-        List<Calendar> calendarList = calendarRepository.findByUserIdAndTourStartDate(userId, tourStartDate);
+        final LocalDateTime tourAtStartOfDay = tourStartDate.atStartOfDay();
+        List<CalendarDetails> calendarDetailsList = calendarDetailsRepository.findCalendarDetailsWithFavPlaceByTourStartDate(userId, tourStartDate, tourAtStartOfDay, tourAtStartOfDay.plusDays(1));
+        return this.convertCalendarDetailsListToDTOList(calendarDetailsList);//calendarDetailsList.stream().map(this::convertCalendarDetailsToDTO).toList();
+    }
 
-        // 2. 해당 calendarId들을 기반으로 CalendarDetails를 조회
-        List<CalendarDetails> calendarDetailsList = calendarDetailsRepository.findByCalendar_CalendarIdInAndScheduleTimeBetween(
-                calendarList.stream().map(Calendar::getCalendarId).collect(Collectors.toList()),
-                tourStartDate.atStartOfDay(),
-                tourStartDate.plusDays(1).atStartOfDay()
-        );
+    public List<CalendarDetailsDTO> getCalendarDetailsByUser(int userId) {
+        List<CalendarDetails> calendarDetailsList = calendarDetailsRepository.findCalendarDetailsWithFavPlace(userId);
+        return this.convertCalendarDetailsListToDTOList(calendarDetailsList);//calendarDetailsList.stream().map(this::convertCalendarDetailsToDTO).toList();
+    }
 
-        // 3. CalendarDetails를 DTO로 변환하여 반환
+    public void deleteCalendarDetailsByUserIdAndCalendarId(int userId, int calendarId) {
+        int affectedRows = calendarDetailsRepository.deleteCalendarDetailsByUserIdAndCalendarId(userId, calendarId);
+        if (affectedRows == 0) {
+            throw new NotFoundException(USER_NOT_FOUNDED);
+        }
+    }
+
+    private List<CalendarDetailsDTO> convertCalendarDetailsListToDTOList(List<CalendarDetails> calendarDetailsList) {
         return calendarDetailsList.stream()
-                .map(cd -> {
-                    // 해당 장소 정보 (place_name, place_image, place_location) 가져오기
-                    FavPlace favPlace = favPlaceRepository.findById(cd.getCalendar().getFavPlaceId())
-                            .orElseThrow(() -> new RuntimeException("FavPlace 를 찾을수 없습니다."));
+                .map(this::convertCalendarDetailsToDTO)
+                .toList();
+    }
 
-                    return new CalendarDetailsDTO(
-                            cd.getCalendarDetailsId(),
-                            cd.getPlaceName(),  // CalendarDetails의 placeName
-                            cd.getScheduleTime(),
-                            cd.getScheduleEndTime(),
-                            cd.getPlaceImage(),
-                            cd.getPlaceLocation(),
-                            cd.getMemo(),
-                            favPlace.getPlaceName(),  // FavPlace에서 가져온 placeName
-                            favPlace.getPlaceImage(), // FavPlace에서 가져온 placeImage
-                            favPlace.getPlaceLocation() // FavPlace에서 가져온 placeLocation
-                    );
-                })
-                .collect(Collectors.toList());
+    private CalendarDetailsDTO convertCalendarDetailsToDTO(CalendarDetails calendarDetails) {
+        return new CalendarDetailsDTO(
+                calendarDetails.getCalendarDetailsId(),
+                calendarDetails.getPlaceName(),
+                calendarDetails.getCalendar().getScheduleTime(),
+                calendarDetails.getCalendar().getScheduleEndTime(),
+                calendarDetails.getCalendar().getMemo(),
+                calendarDetails.getCalendar().getFavPlace().getPlaceName(),
+                calendarDetails.getCalendar().getFavPlace().getPlaceImage(),
+                calendarDetails.getCalendar().getFavPlace().getPlaceLocation()
+        );
     }
 }
 
